GNOME Bugzilla – Bug 649449
[gppmux] Failure to write location
Last modified: 2011-05-05 13:13:58 UTC
Observed on macosx/32bit Running suite(s): tagschecking 66%: Checks: 3, Failures: 1, Errors: 0 pipelines/tagschecking.c:213:F:general:test_geo_location_tags:0: tag item geo-location-latitude has been received with different type or value The problem is that gppmux will write a 'loci' 3gpp location tag with bogus values. The culprit is : GST_WRITE_UINT32_BE (data + 1, (guint32) (longitude * 65536.0)); Whereas it's meant to be a signed integer.
Created attachment 187275 [details] [review] qtmux: Fix signed floating point values writing You would end up on some architectures with 0 being written out instead of the proper value.
commit cca48a42c69d69dcb86ec5ab4c3fd98c9b670731 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Thu May 5 13:24:23 2011 +0200 qtmux: Fix signed floating point values writing You would end up on some architectures with 0 being written out instead of the proper value. https://bugzilla.gnome.org/show_bug.cgi?id=649449